# otto-ai

./: .env.example  .gitignore  .otto-progress-00caa8d5.md  .otto-progress-02fb3c69.md  .otto-progress-0498816b.md  .otto-progress-0559caa2.md  .otto-progress-065e58d9.md  .otto-progress-06c6630f.md  .otto-progress-073f2e26.md  .otto-progress-0a9ea479.md  .otto-progress-0ae07ab3.md  .otto-progress-0d4707d6.md  .otto-progress-0dcea79f.md  .otto-progress-102ded44.md  .otto-progress-106fac2f.md  .otto-progress-11b2fa24.md  .otto-progress-14593861.md  .otto-progress-19822355.md  .otto-progress-1b391a5f.md  .otto-progress-1bd7a65d.md  .otto-progress-1c8ef0f5.md  .otto-progress-1cc52d5b.md  .otto-progress-21ffa72f.md  .otto-progress-24285627.md  .otto-progress-26e3995e.md  .otto-progress-29965a1b.md  .otto-progress-2dc5732b.md  .otto-progress-2e0c6bd3.md  .otto-progress-2e7f671f.md  .otto-progress-2ec032b8.md  .otto-progress-332dcc6a.md  .otto-progress-3a33a009.md  .otto-progress-44f45a4c.md  .otto-progress-4705420d.md  .otto-progress-48cf01fb.md  .otto-progress-496a3f63.md  .otto-progress-4d641272.md  .otto-progress-4f0c463e.md  .otto-progress-570c119e.md  .otto-progress-57deaf97.md  (+120 more)
.claude/: settings.json
.git-templates/: README.md
content-hub/: content_inventory_2026-03-27.csv  content_inventory_2026-03-27.json  mev_start_here_schedule.csv  seed_calendar_slots.sql
docs/: API_DOCS.md  (+167 more)
zkpresence/crates/core/: Cargo.toml
zkpresence/crates/core/src/: identity.rs  lib.rs  types.rs
zkpresence/crates/prover/: Cargo.toml  build.rs
zkpresence/crates/prover/src/: lib.rs
(+2665 files in other folders)
