[package]
name = "zkpresence-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared types for the zkPresence protocol"

[features]
default = ["std"]
std = ["sha2/std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
