[package]
name = "zkpresence-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Host-side prover and CLI for zkPresence"

[dependencies]
sp1-sdk = "6.1"
zkpresence-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = "1"

[build-dependencies]
sp1-build = "6.1"
